mainContainer sizing, mobile on keyboard - collapse display pane, username boxes remove uppercase default for mobile, css for toolbar and filemenu fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,7 @@ opacity:0.9;
 .toolbar:hover{opacity:1;}
 .btn-glyph{background:none;border:none;padding:1px;width:20px;height:20px;}
 .btn-glyph.wysihtml5-command-active{background-color:#5F5757;color:#EFEFEF}
+#button_clear span.glyphicon{padding-top:3px;}
 
 #inputcontainer{
 width:100%;
